// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OcSidebar Sets fixed position 1`] = `
<div class="oc-sidebar oc-sidebar-fixed">
  <div class="oc-sidebar-content-wrapper">
    <oc-button-stub type="button" arialabel="Close sidebar" variation="raw" class="oc-sidebar-button-close">
      <oc-icon-stub name="close" arialabel="icon" type="span" size="small" variation="system" aria-hidden="true"></oc-icon-stub>
    </oc-button-stub>
    <router-link-stub tag="a" to="/" class="oc-sidebar-logo"><span class="oc-sidebar-logo-text">ownCloud</span></router-link-stub>
    <!---->
    <nav class="oc-sidebar-nav">
      <ul>
        <oc-sidebar-nav-item-stub target="/" icon="home" class="oc-sidebar-nav-item">
          Home
        </oc-sidebar-nav-item-stub>
        <oc-sidebar-nav-item-stub target="/files" icon="folder" class="oc-sidebar-nav-item">
          All files
        </oc-sidebar-nav-item-stub>
        <oc-sidebar-nav-item-stub active="true" target="/shared" icon="share" class="oc-sidebar-nav-item">
          Shared files
        </oc-sidebar-nav-item-stub>
      </ul>
    </nav>
    <!---->
  </div>
</div>
`;

exports[`OcSidebar displays a logo image if its source is specified 1`] = `
<div class="oc-sidebar">
  <div class="oc-sidebar-content-wrapper">
    <!---->
    <router-link-stub tag="a" to="/" class="oc-sidebar-logo">
      <oc-img-stub src="https://owncloud.org/wp-content/themes/owncloud/img/owncloud-org-logo.svg" alt="ownCloud" class="oc-sidebar-logo-img"></oc-img-stub>
    </router-link-stub>
    <!---->
    <nav class="oc-sidebar-nav">
      <ul>
        <oc-sidebar-nav-item-stub target="/" icon="home" class="oc-sidebar-nav-item">
          Home
        </oc-sidebar-nav-item-stub>
        <oc-sidebar-nav-item-stub target="/files" icon="folder" class="oc-sidebar-nav-item">
          All files
        </oc-sidebar-nav-item-stub>
        <oc-sidebar-nav-item-stub active="true" target="/shared" icon="share" class="oc-sidebar-nav-item">
          Shared files
        </oc-sidebar-nav-item-stub>
      </ul>
    </nav>
    <!---->
  </div>
</div>
`;

exports[`OcSidebar displays nav items 1`] = `
<div class="oc-sidebar">
  <div class="oc-sidebar-content-wrapper">
    <!---->
    <router-link-stub tag="a" to="/" class="oc-sidebar-logo"><span class="oc-sidebar-logo-text">ownCloud</span></router-link-stub>
    <!---->
    <nav class="oc-sidebar-nav">
      <ul>
        <oc-sidebar-nav-item-stub target="/" icon="home" class="oc-sidebar-nav-item">
          Home
        </oc-sidebar-nav-item-stub>
        <oc-sidebar-nav-item-stub target="/files" icon="folder" class="oc-sidebar-nav-item">
          All files
        </oc-sidebar-nav-item-stub>
        <oc-sidebar-nav-item-stub active="true" target="/shared" icon="share" class="oc-sidebar-nav-item">
          Shared files
        </oc-sidebar-nav-item-stub>
      </ul>
    </nav>
    <!---->
  </div>
</div>
`;

exports[`OcSidebar displays upperContent and footer slots 1`] = `
<div class="oc-sidebar">
  <div class="oc-sidebar-content-wrapper">
    <!---->
    <router-link-stub tag="a" to="/" class="oc-sidebar-logo"><span class="oc-sidebar-logo-text">ownCloud</span></router-link-stub>
    <div class="oc-sidebar-upper-content"><strong class="upper-slot">Files app</strong></div>
    <nav class="uk-margin-bottom oc-sidebar-nav">
      <ul>
        <oc-sidebar-nav-item-stub target="/" icon="home" class="oc-sidebar-nav-item">
          Home
        </oc-sidebar-nav-item-stub>
        <oc-sidebar-nav-item-stub target="/files" icon="folder" class="oc-sidebar-nav-item">
          All files
        </oc-sidebar-nav-item-stub>
        <oc-sidebar-nav-item-stub active="true" target="/shared" icon="share" class="oc-sidebar-nav-item">
          Shared files
        </oc-sidebar-nav-item-stub>
      </ul>
    </nav>
    <div class="oc-sidebar-footer"><small slot="footer" class="footer-slot">Made by ownClouders</small></div>
  </div>
</div>
`;
